[package]
name = "hangouts-json-parser"
version = "0.1.0"
authors = ["Bill Fraser <wfraser@codewise.org>"]
edition = "2018"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dev_dependencies]
chrono = "0.4.19"

[features]
default = []
deny_unknown_fields = []
strict = ["deny_unknown_fields"]
